@@ -1,5 +1,15 @@
 2003-09-27  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem-playlist.c: (update_current_from_playlist),
+	(ensure_shuffled), (totem_playlist_init), (totem_playlist_new),
+	(totem_playlist_add_one_mrl), (totem_playlist_set_previous),
+	(totem_playlist_set_next): fix a couple of crashers, when starting
+	playback, use the first item of the shuffled playlist, not the first
+	of the non shuffled one (so opening totem, dropping a bunch of files
+	and pressing play will play all the files)
+
+2003-09-27  Bastien Nocera  <hadess@hadess.net>
+
 	* src/totem-playlist.c: (totem_playlist_save_current_playlist),
 	(update_current_from_playlist), (totem_playlist_remove_files),
 	(compare_random), (ensure_shuffled), (shuffle_button_toggled),
